--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+  <h2>Artist Lecture Series</h2>
   <ul>
     <li><a href="dimattio/index.html">Francesca DiMattio</a></li>
     <li><a href="fei/index.html">Cao Fei</a></li>
