bg trockel branch

--- a/trockel/index.html
+++ b/trockel/index.html
@@ -16,6 +16,8 @@
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
 
+  <p>Brendan was here...</p>
+
   <script src="assets/js/app.js"></script>
 
 </body>
