--- a/von-bonin/index.html
+++ b/von-bonin/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  Brian's edit.
 
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Cosima von Bonin</div>
