--- a/harrison/index.html
+++ b/harrison/index.html
@@ -12,6 +12,7 @@
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Rachel Harrison</div>
   <div class="title">Zombie Rothko</div>
+  <img src="assets/img/harrison_image1.jpg">
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
