diana cao fei edit

--- a/fei/index.html
+++ b/fei/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="series">Artist Lecture Series</div>
-  <div class="artist">Cao Fei</div>
+  <div class="artist"><img class="cao" src="assets/img/cao.jpg">Cao Fei</div>
   <div class="title">Hip Hop Guangzhou</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
