--- a/trockel/index.html
+++ b/trockel/index.html
@@ -5,16 +5,18 @@
   <title>Rosemarie Trockel - Artist Lecture Series</title>
   <link href="assets/css/styles.css" media="all" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet">
 </head>
 
 <body>
-
+<div class="content">
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Rosemarie Trockel</div>
   <div class="title">Drip Drop Thud</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
+</div>
 
   <script src="assets/js/app.js"></script>
 
