--- a/yang/index.html
+++ b/yang/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <img src="assets/img/download.jpeg">
 
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Haegue Yang</div>
