--- a/koether/index.html
+++ b/koether/index.html
@@ -11,6 +11,9 @@
 
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Jutta Koether</div>
+  <div class="artist-pic">
+    <img src="assets/img/Koether.jpg"/>
+  </div>
   <div class="title">Traveling Light</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
