--- a/schutz/index.html
+++ b/schutz/index.html
@@ -5,18 +5,21 @@
   <title>Dana Schutz - Artist Lecture Series</title>
   <link href="assets/css/styles.css" media="all" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Crushed" rel="stylesheet">
+
 </head>
 
 <body>
-
+<div class="Text"> 
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Dana Schutz</div>
   <div class="title">Run</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
+</div>
 
-  <script src="assets/js/app.js"></script>
+  <script src="assets/js/app.js"> dana </script>
 
 </body>
 
