add my pages again

--- a/von-bonin/index.html
+++ b/von-bonin/index.html
@@ -18,6 +18,7 @@
     <div class="location">2 W 13, Rm 1111</div>
     <div class="time">7 PM</div>
   </div>
+  <div class="img"><img src="assets/img/a.jpg"/></div>
 
   <script src="assets/js/app.js"></script>
 
