--- a/yi/index.html
+++ b/yi/index.html
@@ -9,12 +9,15 @@
 
 <body>
 
-  <div class="series">Artist Lecture Series</div>
-  <div class="artist">Anicka Yi</div>
-  <div class="title">Immigrant Caucus</div>
-  <div class="date">Mar 6, 2018</div>
-  <div class="location">2 W 13, Rm 1111</div>
-  <div class="time">7 PM</div>
+  <div class="infoWrapper">
+    <div class="series">Artist Lecture Series</div>
+    <div class="artist">Anicka Yi</div>
+    <div class="title">Immigrant Caucus</div>
+    <div class="date">Mar 6, 2018</div>
+    <div class="location">2 W 13, Rm 1111</div>
+    <div class="time">7 PM</div>
+  </div>
+  <div class="petriDish"><img src="assets/img/petri_dish.jpg"/></div>
 
   <script src="assets/js/app.js"></script>
 
