--- a/genzken/index.html
+++ b/genzken/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+    <p1>Born in Bad Oldesloe, Germany, 1948
+    </p1>
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Isa Genzken</div>
   <div class="title">Mach Dich Hübsch!</div>
