pserr anne imhof changes

--- a/imhof/index.html
+++ b/imhof/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Anne Imhof - Artist Lecture Series</title>
   <link href="assets/css/styles.css" media="all" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,900" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
 
