add elizabeth peyton

--- a/peyton/index.html
+++ b/peyton/index.html
@@ -9,6 +9,9 @@
 
 <body>
 
+  <h1> that's hot. </h1>  
+  <img src="assets/img/paris.jpeg"  height="300" width="250">
+
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Elizabeth Peyton</div>
   <div class="title">Speed Power Time Heart</div>
