--- a/von-bonin/index.html
+++ b/von-bonin/index.html
@@ -11,14 +11,14 @@
   
 
   <div class="series">Artist Lecture Series</div>
-  <div class="artist">Cosima von Bonin</div>
+  <div class="artist"><Cosima von Bonin</div>
   <div class="title">Hippies Use Side Door</div>
   <div class="content">
     <div class="date">Mar 6, 2018</div>
     <div class="location">2 W 13, Rm 1111</div>
     <div class="time">7 PM</div>
   </div>
-  <div class="img"><img src="assets/img/a.jpg"/></div>
+  <div class="img"><img class="img" src="assets/img/a.jpg"/></div>
 
   <script src="assets/js/app.js"></script>
 
