--- a/trockel/index.html
+++ b/trockel/index.html
@@ -18,6 +18,16 @@
   <div class="time">7 PM</div>
 </div>
 
+<div class= "container">
+  <ul>
+     <li><img src= "assets/img/drip1.jpg"></li>
+     <li><img src= "assets/img/drip2.jpg"></li>
+     <li><img src= "assets/img/drip3.jpg"></li>
+</ul>
+
+
+</div>
+
   <script src="assets/js/app.js"></script>
 
 </body>
