--- a/schutz/index.html
+++ b/schutz/index.html
@@ -14,7 +14,7 @@
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Dana Schutz</div>
   <img src="assets/img/schutz_image1.jpg">
-  <div class="title">Run</div>
+  <div class="title">"Run"</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
