--- a/harrison/index.html
+++ b/harrison/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+  
+    <div class="header">
+        <a href="https://www.zingmagazine.com/zing3/reviews/035_harrison.html">Should home windows or shutters be required to withstand a direct hit from an eight-foot-long two-by-four shot from a cannon at 34 miles an hour, without creating a hole big enough to let through a three-inch sphere?</a>
+      </div>
 
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Rachel Harrison</div>
@@ -16,6 +20,8 @@
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
+
+
 
   <script src="assets/js/app.js"></script>
 
