--- a/genzken/index.html
+++ b/genzken/index.html
@@ -8,13 +8,21 @@
 </head>
 
 <body>
-
   <div class="series">Artist Lecture Series</div>
+  <div class="video">
+    <iframe width="560" height="315" 
+      src="https://www.youtube.com/embed/OYWIaJJ-P8c" 
+      frameborder="0" allow="autoplay; encrypted-media" 
+      allowfullscreen></iframe>
+  </div>
   <div class="artist">Isa Genzken</div>
   <div class="title">Mach Dich Hübsch!</div>
-  <div class="date">Mar 6, 2018</div>
-  <div class="location">2 W 13, Rm 1111</div>
-  <div class="time">7 PM</div>
+  
+  <div class="info">
+    <div class="date">Mar 6, 2018</div>
+    <div class="location">2 W 13, Rm 1111</div>
+    <div class="time">7 PM</div>
+  </div>
 
   <script src="assets/js/app.js"></script>
 
