--- a/schutz/index.html
+++ b/schutz/index.html
@@ -20,6 +20,12 @@
   <div class="time">7 PM</div>
 </div>
 
+<div class="emmit"> 
+  <a href="https://en.wikipedia.org/wiki/Emmett_Till">
+    <img src="assets/img/emmit.jpg">
+  </a>
+</div>
+
   <script src="assets/js/app.js"> dana </script>
 
 </body>
