--- a/yi/index.html
+++ b/yi/index.html
@@ -5,6 +5,8 @@
   <title>Anicka Yi - Artist Lecture Series</title>
   <link href="assets/css/styles.css" media="all" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Outline|Crushed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Outline|Crushed" rel="stylesheet">
 </head>
 
 <body>
