--- a/trockel/index.html
+++ b/trockel/index.html
@@ -8,13 +8,23 @@
 </head>
 
 <body>
-
-  <div class="series">Artist Lecture Series</div>
-  <div class="artist">Rosemarie Trockel</div>
-  <div class="title">Drip Drop Thud</div>
-  <div class="date">Mar 6, 2018</div>
-  <div class="location">2 W 13, Rm 1111</div>
-  <div class="time">7 PM</div>
+  <div class="head">
+    <div class="Column">Artist Lecture Series</div>
+    <div class="Column">Rosemarie Trockel</div>
+    <div class="Column">Drip Drop Thud</div>
+  </div>
+  <div class="intro">
+    Rosemarie Trockel is a German artist. 
+    She is a professor at the Kunstakademie Düsseldorf, 
+    in Düsseldorf in Nordrhein-Westfalen. From about 
+    1985 she made machine-knitted works with geometric 
+    or symbolic designs.
+  </div>
+  <div class="foot">
+    <div class="Column2">Mar 6, 2018</div>
+    <div class="Column2">2 W 13, Rm 1111</div>
+    <div class="Column2">7 PM</div>
+  </div>
 
   <script src="assets/js/app.js"></script>
 
