added actual image instead of random

--- a/yi/index.html
+++ b/yi/index.html
@@ -19,10 +19,11 @@
     <div class="location">2 W 13, Rm 1111</div>
     <div class="time">7 PM</div>
   </div>
-  <div class="petriDish"><img src="assets/img/petri_dish.jpg"/></div>
+  <!-- <div class="petriDish"><img src="assets/img/petri_dish.jpg"/></div> -->
+
 
   <script src="assets/js/app.js"></script>
-
+  <img src="assets/img/yi_image2.jpeg"/></div>
 </body>
 
 </html>
