--- a/schutz/index.html
+++ b/schutz/index.html
@@ -15,6 +15,7 @@
   <div class="artist">Dana Schutz</div>
   <img src="assets/img/schutz_image1.jpg">
   <div class="title">"Run"</div>
+  <a href="https://www.artsy.net/artwork/dana-schutz-run">The Story behind Run</a>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
