mejia rosemarie trockel edits

--- a/trockel/index.html
+++ b/trockel/index.html
@@ -37,9 +37,9 @@
 
 <div class= "container">
   <ul>
-     <li><img src= "assets/img/drip1.jpg"></li>
-     <li><img src= "assets/img/drip2.jpg"></li>
-     <li><img src= "assets/img/drip3.jpg"></li>
+     <li><img class="drip1" src= "assets/img/drip1.jpg"></li>
+     <li><img class="drip2" src= "assets/img/drip2.jpg"></li>
+     <li><img class="drip3"src= "assets/img/drip3.jpg"></li>
 </ul>
 
 
