add Mach Dich Hübsch book img

--- a/genzken/index.html
+++ b/genzken/index.html
@@ -28,6 +28,10 @@
     <div class="time">7 PM</div>
   </div>
 
+  <div class="book">
+    <img src="assets/img/book.jpg"/>
+  </div>
+
   <script src="assets/js/app.js"></script>
 
 </body>
