pserr cao fei changes

--- a/fei/index.html
+++ b/fei/index.html
@@ -9,17 +9,23 @@
 
 <body>
 
-  <div class="series">Artist Lecture Series</div>
-  <div class="artist">
-    <div class="cao">
-      <img src="assets/img/cao.jpg"/>
-    </div> 
-    Cao Fei</div>
-  <div class="website"> <a href="http://www.caofei.com/">Cao's world</a></div>
-  <div class="title">Hip Hop Guangzhou</div>
-  <div class="date">Mar 6, 2018</div>
-  <div class="location">2 W 13, Rm 1111</div>
-  <div class="time">7 PM</div>
+  <div class="contentWrapper">
+    <div class="series">Artist Lecture Series</div>
+    <div class="artist">
+      <div class="cao">
+        <img src="assets/img/cao.jpg"/>
+      </div> 
+      Cao Fei</div>
+    <div class="website"> <a href="http://www.caofei.com/">Cao's world</a></div>
+    <div class="title">Hip Hop Guangzhou</div>
+    <div class="date">Mar 6, 2018</div>
+    <div class="location">2 W 13, Rm 1111</div>
+    <div class="time">7 PM</div>
+</div>
+
+  <div class="promoImg">
+    <img src="assets/img/cao-fei-rmb.jpg"/>
+  </div>
 
   <script src="assets/js/app.js"></script>
 
