--- a/peyton/index.html
+++ b/peyton/index.html
@@ -5,6 +5,7 @@
   <title>Elizabeth Peyton - Artist Lecture Series</title>
   <link href="assets/css/styles.css" media="all" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +16,10 @@
   <img src="assets/img/peyton_image3.jpg"  height="300" width="250">
   <img src="assets/img/peyton_image4.jpg"  height="300" width="250">
   <img src="assets/img/peyton_image5.jpg"  height="300" width="250">
-
+  
+  <div class="buy">
+    <a href="https://www.artsy.net/artist/elizabeth-peyton/works">gg</div>
+      </a
 
   <div class="title">Speed Power Time Heart</div>
   <div class="date">Mar 6, 2018</div>
