--- a/imhof/index.html
+++ b/imhof/index.html
@@ -10,13 +10,15 @@
 
 <body>
 
+ <div class="text">
+
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Anne Imhof</div>
   <div class="title">Faust</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
-
+</div>
   <script src="assets/js/app.js"></script>
 
 </body>
