add blinking quote

--- a/trockel/index.html
+++ b/trockel/index.html
@@ -42,9 +42,11 @@
      <li><img class="drip3"src= "assets/img/drip3.jpg"></li>
 </ul>
 
-
 </div>
 
+<div class="quote">
+    “The minute something works, it ceases to be interesting,”
+</div>
   <script src="assets/js/app.js"></script>
 
 </body>
