--- a/von-bonin/index.html
+++ b/von-bonin/index.html
@@ -20,6 +20,10 @@
   </div>
   <div class="img"><img class="img" src="assets/img/a.jpg"/></div>
 
+  <div class="tagline">
+    &#40;See you there&#41;
+  </div>
+
   <script src="assets/js/app.js"></script>
 
 </body>
