mejia rachel harrison eidt

--- a/harrison/index.html
+++ b/harrison/index.html
@@ -10,7 +10,7 @@
 <body>
   
     <div class="header">
-        <a href="https://www.zingmagazine.com/zing3/reviews/035_harrison.html">Should home windows or shutters be required to withstand a direct hit from an eight-foot-long two-by-four shot from a cannon at 34 miles an hour, without creating a hole big enough to let through a three-inch sphere?</a>
+        <a href="https://www.zingmagazine.com/zing3/reviews/035_harrison.html">"Should home windows or shutters be required to withstand a direct hit from an eight-foot-long two-by-four shot from a cannon at 34 miles an hour, without creating a hole big enough to let through a three-inch sphere?"</a>
       </div>
   <div class=title>
     <div class="series">Artist Lecture Series</div>
