--- a/koether/index.html
+++ b/koether/index.html
@@ -14,10 +14,13 @@
   <div class="artist-pic">
     <img src="assets/img/Koether.jpg"/>
   </div>
+
+  <div class="book"></div>
   <div class="title">Traveling Light</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
+
 
   <script src="assets/js/app.js"></script>
 
