--- a/schutz/index.html
+++ b/schutz/index.html
@@ -10,21 +10,28 @@
 </head>
 
 <body>
-<div class="Text"> 
+
+<div class="wrapper"> 
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Dana Schutz</div>
-  <img src="assets/img/schutz_image1.jpg">
+
+  <div class="img">
+    <img src="assets/img/schutz_image1.jpg">
+  </div>
+
   <div class="title">"Run"</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
+
+
+  <div class="emmit"> 
+     <a href="https://en.wikipedia.org/wiki/Emmett_Till">
+     <img src="assets/img/emmit.jpg">
+    </a>
+  </div>
 </div>
 
-<div class="emmit"> 
-  <a href="https://en.wikipedia.org/wiki/Emmett_Till">
-    <img src="assets/img/emmit.jpg">
-  </a>
-</div>
 
   <script src="assets/js/app.js"> dana </script>
 
