--- a/yi/index.html
+++ b/yi/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+
   <div class="infoWrapper">
     <div class="series">Artist Lecture Series</div>
     <div class="artist">Anicka Yi</div>
@@ -19,6 +20,12 @@
     <div class="location">2 W 13, Rm 1111</div>
     <div class="time">7 PM</div>
   </div>
+
+  <div class="weird-shape">
+      <div class="shape1"></div>
+      <div class="shape2"></div>
+      <div class="shape3"></div>
+    </div>
   <!-- <div class="petriDish"><img src="assets/img/petri_dish.jpg"/></div> -->
 
 
