added correct image

--- a/koether/index.html
+++ b/koether/index.html
@@ -12,7 +12,7 @@
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Jutta Koether</div>
   <div class="artist-pic">
-    <img src="assets/img/Koether.jpg"/>
+    <img src="assets/img/koether_image1.jpg"/>
   </div>
 
   <div class="book"></div>
