--- a/koether/index.html
+++ b/koether/index.html
@@ -15,7 +15,7 @@
     <img src="assets/img/koether_image1.jpg"/>
   </div>
 
-  <div class="book"></div>
+  <!-- <div class="book"></div> -->
   <div class="title">Traveling Light</div>
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
