add Harrison's work images

--- a/harrison/index.html
+++ b/harrison/index.html
@@ -24,7 +24,13 @@
     <div class="location">2 W 13, Rm 1111</div>
     <div class="time">7 PM</div>
   </div>
-
+  
+  <div class="work">
+    <img src="assets/img/Harrison1.jpg"/>
+    <img src="assets/img/Harrison2.jpg"/>
+    <img src="assets/img/Harrison3.jpg"/>
+    <img src="assets/img/Harrison4.jpg"/>
+  </div>
 
 
   <script src="assets/js/app.js"></script>
