--- a/von-bonin/index.html
+++ b/von-bonin/index.html
@@ -11,7 +11,7 @@
   
 
   <div class="series">Artist Lecture Series</div>
-  <div class="artist"><Cosima von Bonin</div>
+  <div class="artist">Cosima von Bonin</div>
   <div class="title">Hippies Use Side Door</div>
   <div class="content">
     <div class="date">Mar 6, 2018</div>
