pserr genzken changes

--- a/genzken/index.html
+++ b/genzken/index.html
@@ -19,8 +19,10 @@
       allowfullscreen></iframe>
   </div>
   <div class="artist">Isa Genzken</div>
-  <div class="title">Mach Dich Hübsch!</div>
+  <div class="title">Mach Dich H&uuml;bsch!</div>
   
+  <div class="circle">
+  </div>
   
   <div class="info">
     <div class="date">Mar 6, 2018</div>
