--- a/imhof/index.html
+++ b/imhof/index.html
@@ -17,6 +17,11 @@
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
+
+  <br>
+  <div class="dior">
+    <a href="https://www.dior.com/couture/en_us/womens-fashion/summer-2018-collection?utm_source=ArtNet&utm_medium=Desktop&utm_content=AVArticlesROS_1x1&utm_campaign=FASHION_SS2018_USA"> X DIOR</a>
+  </div>
 </div>
   <script src="assets/js/app.js"></script>
 
