--- a/fei/index.html
+++ b/fei/index.html
@@ -17,6 +17,7 @@
       </div> 
       Cao Fei</div>
     <div class="website"> <a href="http://www.caofei.com/">Cao's world</a></div>
+    <img src="assets/img/taichi.jpg" height="300" width="700">
     <div class="title">Hip Hop Guangzhou</div>
     <div class="date">Mar 6, 2018</div>
     <div class="location">2 W 13, Rm 1111</div>
@@ -25,7 +26,7 @@
 
   
 
-  <script src="assets/js/app.js"></script>
+  <script src="assets/js/app.js"> </script>
 
 </body>
 
