--- a/peyton/index.html
+++ b/peyton/index.html
@@ -8,13 +8,19 @@
 </head>
 
 <body>
+
   <div class="series">Artist Lecture Series</div>
   <div class="artist">Elizabeth Peyton</div>
+<div class="item"></div>
   <img src="assets/img/peyton_image1.jpg"  height="300" width="250">
   <img src="assets/img/peyton_image2.jpg"  height="300" width="250">
   <img src="assets/img/peyton_image3.jpg"  height="300" width="250">
   <img src="assets/img/peyton_image4.jpg"  height="300" width="250">
   <img src="assets/img/peyton_image5.jpg"  height="300" width="250">
+  <img src="assets/img/peyton_image6.jpg"  height="300" width="250">
+  <img src="assets/img/peyton_image7.jpg"  height="300" width="250">
+  <img src="assets/img/peyton_image8.jpg"  height="300" width="250">
+</div>
 
 
   <div class="title">Speed Power Time Heart</div>
