--- a/von-bonin/index.html
+++ b/von-bonin/index.html
@@ -5,6 +5,7 @@
   <title>Cosima von Bonin - Artist Lecture Series</title>
   <link href="assets/css/styles.css" media="all" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
   <div class="img"><img class="img" src="assets/img/a.jpg"/></div>
 
   <div class="tagline">
-    &#40;See you there&#41;
+    &#40;call me maybe?&#41;
   </div>
 
   <script src="assets/js/app.js"></script>
