--- a/harrison/index.html
+++ b/harrison/index.html
@@ -32,6 +32,12 @@
     <img src="assets/img/Harrison4.jpg"/>
   </div>
 
+  <div class="circle c1"></div>
+  <div class="circle c2"></div>
+  <div class="circle c3"></div>
+  <div class="circle c4"></div>
+  <div class="circle c5"></div>
+
 
   <script src="assets/js/app.js"></script>
 
