--- a/von-bonin/index.html
+++ b/von-bonin/index.html
@@ -15,7 +15,7 @@
   <div class="artist">Cosima von Bonin</div>
   <div class="title">Hippies Use Side Door</div>
   <div class="content">
-    <div class="date">Mar 6, 2018</div>
+    <div class="date">Mar 6, 2018!</div>
     <div class="location">2 W 13, Rm 1111</div>
     <div class="time">7:00 PM</div>
   </div>
