--- a/peyton/index.html
+++ b/peyton/index.html
@@ -31,6 +31,14 @@
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
 
+  <div class="shape">
+    <div class="circle c1"></div>
+    <div class="circle c2"></div>
+    <div class="circle c3"></div>
+    <div class="circle c4"></div>
+    <div class="circle c5"></div> 
+  </div>
+
   <script src="assets/js/app.js"></script>
 
 </body>
