--- a/yi/index.html
+++ b/yi/index.html
@@ -25,6 +25,8 @@
       <div class="shape1"></div>
       <div class="shape2"></div>
       <div class="shape3"></div>
+      <div class="shape4"></div>
+      <div class="shape5"></div>
 
     </div>
   <!-- <div class="petriDish"><img src="assets/img/petri_dish.jpg"/></div> -->
