--- a/schutz/index.html
+++ b/schutz/index.html
@@ -24,6 +24,7 @@
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
+  <div id="star"></div>
 
 
   <div class="emmit"> 
