--- a/koether/index.html
+++ b/koether/index.html
@@ -20,6 +20,13 @@
   <div class="date">Mar 6, 2018</div>
   <div class="location">2 W 13, Rm 1111</div>
   <div class="time">7 PM</div>
+  
+<div class="shape"></div>
+<div class="shape2"></div>
+<div class="shape3"></div>
+<div class="shape4"></div>
+<div class="shape5"></div>
+<div class="shape6"></div>
 
 
   <script src="assets/js/app.js"></script>
