--- a/imhof/index.html
+++ b/imhof/index.html
@@ -22,6 +22,7 @@
   <div class="dior">
     <a href="https://www.dior.com/couture/en_us/womens-fashion/summer-2018-collection?utm_source=ArtNet&utm_medium=Desktop&utm_content=AVArticlesROS_1x1&utm_campaign=FASHION_SS2018_USA"> X DIOR</a>
   </div>
+  <div class="triangle"></div>
 </div>
   <script src="assets/js/app.js"></script>
 
