--- a/fei/index.html
+++ b/fei/index.html
@@ -22,6 +22,15 @@
     <div class="date">Mar 6, 2018</div>
     <div class="location">2 W 13, Rm 1111</div>
     <div class="time">7 PM</div>
+   
+    <div class="china">
+      <a href="https://www.lonelyplanet.com/china">
+      <div class="rectangle">
+        <div class="circle"></div>
+      </a>
+      </div>
+
+    </div>
 </div>
 
   
